--- a/style/common/header/_center-aligned.scss
+++ b/style/common/header/_center-aligned.scss
@@ -2,6 +2,10 @@
     
     @media all and (min-width: $breakpoint__tablet-landscape) {
         
+        #site-navigation {
+            display: inline-block;
+        }
+        
         .site-branding {
             float: none;
             display: block;
